plugins {
    java
    // 4.0.4 → 4.0.7: CVE-2026-40976(CRITICAL, 기본 웹 시큐리티 무력화)를 비롯해 Boot BOM 이 관리하는
    // spring-*, spring-security, spring-kafka, spring-data, tomcat-embed, netty, jackson, micrometer 의
    // HIGH/CRITICAL 이 이 한 줄로 함께 올라간다. 근거·잔여 목록은 .trivyignore.yaml.
    //
    // 4.0.6 이 아니라 4.0.7 인 이유(SBOM 실측): 4.0.6 이 물고 오는 관리 버전은 수정판보다 딱 한 패치
    // 아래라(tomcat 11.0.21 vs 11.0.22, netty 4.2.12 vs 4.2.13+, jackson 2.21.2 vs 2.21.4) 부채가
    // 38건 남는다. 같은 4.0.x 라인의 4.0.7 은 8건까지 줄인다 — 48 → 38(4.0.6) → 8(4.0.7).
    // shared-common/build.gradle.kts 의 spring-boot-dependencies 좌표와 반드시 같은 값이어야 한다
    // (composite build 로 로컬 치환되므로 버전이 갈리면 서비스마다 다른 BOM 이 섞인다).
    id("org.springframework.boot") version "4.0.7" apply false
    id("io.spring.dependency-management") version "1.1.7" apply false
    jacoco
    // 5.1.0.4882 는 Gradle 9 에서 제거된 Convention API 를 호출해 sonar 태스크가
    // NoSuchMethodError 로 즉사했다(2026-08-10 run 31432558450, "BUILD FAILED in 13s").
    // continue-on-error 가 이 실패를 삼켜서, SonarCloud 분석은 한 번도 올라간 적이 없다.
    id("org.sonarqube") version "7.4.0.8496"
    // SCA(의존성 취약점) 게이트용 SBOM 생성. Trivy 가 이 BOM 을 스캔한다(ci.yml backend-ci).
    id("org.cyclonedx.bom") version "3.4.1"
}

allprojects {
    group = "github.lms.lemuel"
    version = "0.0.1-SNAPSHOT"

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply(plugin = "java")
    apply(plugin = "io.spring.dependency-management")
    apply(plugin = "jacoco")

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(25))
        }
    }

    // -parameters: 메서드 파라미터 이름을 바이트코드에 보존한다.
    // Spring Data 가 @Param 없이도 @Query 의 이름 파라미터(:name)를 파라미터명으로 추론 →
    // 파라미터 바인딩 누락으로 인한 런타임 실패(PostgreSQL 42P18 "indeterminate datatype",
    // 폴링 쿼리 ERROR 폭주로 인한 ELK 색인 과부하) 계열의 1차 방어선.
    // (2차 방어선: 각 서비스 아키텍처 테스트의 @Query↔@Param 매칭 ArchUnit 룰)
    tasks.withType<JavaCompile>().configureEach {
        options.compilerArgs.add("-parameters")
    }

    extensions.configure<io.spring.gradle.dependencymanagement.dsl.DependencyManagementExtension> {
        imports {
            mavenBom("org.springframework.cloud:spring-cloud-dependencies:2025.1.0")
        }
    }

    tasks.withType<Test>().configureEach {
        useJUnitPlatform()
        // Testcontainers(Redpanda/ES/PG) + 다수 @SpringBootTest 컨텍스트가 하나의 test JVM 에
        // 누적되어 기본 힙(러너 RAM 25%)을 초과, OutOfMemoryError→스레드 사망→hang→CI 90분
        // 타임아웃을 유발했다. 힙 상한을 명시하고, JVM 을 주기적으로 재활용해 누적된 스프링
        // 컨텍스트 캐시·컨테이너 자원을 방출한다. (OOM 시 원인 규명을 위해 힙덤프 남김)
        maxHeapSize = "3g"
        setForkEvery(50)
        // 프로덕션은 KST Clock 을 주입하는데(TimeConfig) 다수 정산 테스트가 bare LocalDate.now()/
        // LocalDateTime.now() 로 기준일을 단정한다. CI 러너(UTC)에서 KST 자정~오전9시 창에 날짜가
        // 하루 어긋나 off-by-one 단정 실패(SettlementDate 등)를 유발했다. 테스트 JVM 을 프로덕션과
        // 동일한 KST 로 고정해 이 클래스의 타임존 플레이키를 결정적으로 제거한다.
        systemProperty("user.timezone", "Asia/Seoul")
        jvmArgs("-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=build/test-heapdump.hprof")
        finalizedBy(tasks.named("jacocoTestReport"))
        // JWT 서명키는 운영에서 env(JWT_SECRET)로만 주입한다(yaml 기본값 없음 = 미설정 시 기동 실패).
        // 테스트도 동일하게 env 로 공급해, 풀 컨텍스트(@SpringBootTest) 부팅 시 ${JWT_SECRET} 미해결
        // 실패를 막는다. 운영 배포는 반드시 강한 JWT_SECRET 을 주입할 것.
        environment("JWT_SECRET", "test-only-jwt-secret-not-for-production-0123456789")
        // 지급계좌 PII 암호화 키(Base64 32바이트=AES-256). settlement PayoutFieldEncryptionConverter 는
        // JWT_SECRET 과 동일하게 env 필수(기본값 없음) — 테스트 부팅 시 미해결 실패를 막기 위해 주입한다.
        // 운영 배포는 반드시 강한 PAYOUT_ENC_KEY 를 주입할 것. (decode → "test-only-payout-enc-key-0123456")
        environment("PAYOUT_ENC_KEY", "dGVzdC1vbmx5LXBheW91dC1lbmMta2V5LTAxMjM0NTY=")
        // 대화 본문 PII 암호화 키(Base64 32바이트=AES-256). ai-service ChatContentEncryptionConverter 는
        // JWT_SECRET 과 동일하게 env 필수(기본값 없음) — 테스트 부팅 시 미해결 실패를 막기 위해 주입한다.
        // 운영 배포는 반드시 강한 CHAT_ENC_KEY 를 주입할 것. (decode → "test-only-chat-enc-key-012345678")
        environment("CHAT_ENC_KEY", "dGVzdC1vbmx5LWNoYXQtZW5jLWtleS0wMTIzNDU2Nzg=")
        // 보험 PII 암호화 키(Base64 32바이트=AES-256). insurance-service PiiEncryptionConverter 는
        // JWT_SECRET 과 동일하게 env 필수(기본값 없음) — 테스트 부팅 시 미해결 실패를 막기 위해 주입한다.
        // 운영 배포는 반드시 강한 INSURANCE_ENC_KEY 를 주입할 것. (decode → "test-only-ins-enc-key-0123456789")
        environment("INSURANCE_ENC_KEY", "dGVzdC1vbmx5LWlucy1lbmMta2V5LTAxMjM0NTY3ODk=")
    }

    tasks.named<JacocoReport>("jacocoTestReport") {
        dependsOn(tasks.named("test"))
        // jacocoTestReport 는 main 소스셋 출력(build/classes/java/main + build/resources/main)을
        // classDirectories/sourceDirectories 로 읽는다. -x test 로 test 를 건너뛰면
        // test→classes 경로가 끊겨 Gradle 9 의 implicit-dependency 검증에 걸리므로,
        // compileJava·processResources 를 aggregate 하는 classes 를 명시적으로 선언한다.
        dependsOn(tasks.named("classes"))
        reports {
            xml.required.set(true)
            html.required.set(true)
            csv.required.set(false)
        }
        // QueryDSL 생성 클래스(Q*)는 자동 생성 코드 → 커버리지 측정에서 제외 (전 모듈 공통)
        classDirectories.setFrom(classDirectories.files.map { dir ->
            fileTree(dir) { exclude("**/Q*.class") }
        })
    }

    // 커버리지 임계값. CI 에서 회귀 시 즉시 빌드 실패 → PR 차단.
    // LINE 90% 목표 (persistence adapter 는 TestContainers IT 에서 별도 검증).
    tasks.named<JacocoCoverageVerification>("jacocoTestCoverageVerification") {
        dependsOn(tasks.named("jacocoTestReport"))

        // persistence adapter, config, mapper 는 통합 테스트 대상 → 단위 테스트 커버리지에서 제외
        classDirectories.setFrom(classDirectories.files.map { dir ->
            fileTree(dir) {
                exclude(
                    "**/adapter/out/persistence/**",
                    "**/adapter/out/readmodel/**",
                    "**/adapter/out/search/**",
                    "**/adapter/out/event/**",
                    "**/adapter/out/pdf/**",
                    "**/adapter/out/external/**",
                    "**/adapter/out/notification/**",
                    "**/adapter/out/mail/**",
                    "**/adapter/out/security/**",
                    "**/adapter/out/monitoring/**",
                    "**/adapter/out/user/**",
                    "**/adapter/out/pg/**",
                    "**/adapter/out/llm/**",
                    "**/adapter/in/web/**",
                    "**/adapter/in/kafka/**",
                    "**/adapter/in/batch/**",
                    "**/adapter/in/api/**",
                    "**/adapter/in/dto/**",
                    "**/config/**",
                    "**/util/**",
                    "**/LemuelApplication*",
                    "**/SettlementServiceApplication*",
                    "**/GatewayServiceApplication*",
                    "**/FinancialStatementsApplication*",
                    "**/CompanyServiceApplication*",
                    "**/OperationServiceApplication*",
                    "**/EconomicsApplication*",
                    "**/MarketApplication*",
                    "**/CommonDataApplication*",
                    "**/AiServiceApplication*",
                    "**/InvestmentServiceApplication*",
                    "**/AccountServiceApplication*",
                    "**/InsuranceServiceApplication*",
                )
            }
        })

        violationRules {
            rule {
                limit {
                    counter = "LINE"
                    minimum = "0.90".toBigDecimal()
                }
            }
            // 핵심 도메인은 더 엄격하게
            rule {
                element = "PACKAGE"
                includes = listOf(
                    "github.lms.lemuel.payment.domain.*",
                    "github.lms.lemuel.order.domain.*",
                    "github.lms.lemuel.product.domain.*",
                    "github.lms.lemuel.cart.domain.*",
                    "github.lms.lemuel.shipping.domain.*",
                    "github.lms.lemuel.settlement.domain.*",
                    "github.lms.lemuel.pgreconciliation.domain.*",
                    "github.lms.lemuel.economics.domain.*",
                    "github.lms.lemuel.market.domain.*",
                    "github.lms.lemuel.commondata.domain.*",
                    "github.lms.lemuel.investment.domain.*",
                    "github.lms.lemuel.financial.domain.*",
                    "github.lms.lemuel.ai.chat.domain.*",
                    "github.lms.lemuel.insurance.domain.*",
                    // common.outbox.domain 게이트는 shared-common 독립 빌드로 이관됨
                )
                limit {
                    counter = "INSTRUCTION"
                    minimum = "0.80".toBigDecimal()
                }
            }
        }
    }

    // check 가 호출되면 커버리지 검증도 같이 — CI 의 ./gradlew check 가 자동 강제
    tasks.named("check") { dependsOn(tasks.named("jacocoTestCoverageVerification")) }

    // JaCoCo XML 을 Sonar 에 넘긴다 — 이게 없어서 SonarCloud 커버리지가 0.0% 로 잡혀 있었다
    // (2026-08-12 실측: coverage 0.0% · new_coverage 0.0%, 저장소 자체 게이트는 LINE 90% 인데도).
    // 멀티모듈은 모듈별로 경로를 줘야 한다 — 루트에 한 번 적으면 서브모듈 리포트를 못 찾는다.
    // 파일은 ci.yml 의 `clean build`(=jacocoTestReport 포함)가 만들고, 그다음 `./gradlew sonar`
    // 호출이 읽는다. 변경 모듈만 빌드된 경우 없는 모듈은 Sonar 가 경고만 남기고 넘어간다.
    sonar {
        properties {
            property(
                "sonar.coverage.jacoco.xmlReportPaths",
                layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile.path,
            )
        }
    }
}

sonar {
    properties {
        property("sonar.projectKey", "MyoungSoo7_settlement")
        property("sonar.organization", "myoungsoo7")
        property("sonar.host.url", "https://sonarcloud.io")
        // 일부러 false 다 — "분석이 안 돌았다"는 막고, "품질 게이트 내용"은 아직 막지 않는다.
        //
        // ci.yml 의 continue-on-error 는 제거된 상태이므로 플러그인 크래시·토큰 만료처럼
        // *분석 자체가 실패*하면 backend-ci 가 깨진다(원래 결함은 닫힌 상태). 여기서 wait 까지
        // true 로 두면 6개월치 누적 부채가 그대로 차단으로 들어온다 — 실측(2026-08-12,
        // sonarcloud api/qualitygates/project_status, 마지막 분석 2026-02-26 기준):
        //   status=ERROR · new_reliability_rating 3(A 요구) · new_coverage 0.0%(80% 요구)
        // 커버리지 0% 는 테스트가 없어서가 아니라 JaCoCo XML 이 Sonar 로 전달된 적이 없어서다
        // (이 블록에 sonar.coverage.jacoco.xmlReportPaths 가 없다. 저장소 자체 게이트는 LINE 90%).
        //
        // true 로 조이는 순서: ① JaCoCo XML 을 Sonar 에 연결해 커버리지 0% 해소
        //   → ② bugs 3건 정리(new_reliability_rating A) → ③ 그때 이 값을 true 로.
        property("sonar.qualitygate.wait", false)
        property("sonar.java.source", "25")

        // ⚠ 미해결(빌드에서 고칠 수 없음): 스캐너가 남기는
        //   "Could not find ref 'master' in refs/heads, refs/remotes, refs/remotes/upstream
        //    or refs/remotes/origin" (2026-08-12 run 31611508158 실측)
        // 원인은 SonarCloud 프로젝트의 **주 브랜치가 `master` 로 등록**돼 있는데 저장소에는 그 ref 가
        // 없다는 것이다(원격 브랜치는 main·develop 뿐 — master 는 rename 됐다).
        //
        // 여기서 sonar.branch.name 을 GITHUB_REF_NAME 으로 주는 우회는 **일부러 하지 않았다**:
        // 그러면 develop 이 서버의 주 브랜치가 아니라 신규 "브랜치"로 등록되고, 신규 코드 기준선이
        // 이력 없는 상태에서 다시 잡혀 new_* 지표가 오히려 왜곡된다(현재는 develop 분석이 주 브랜치
        // 이력에 누적되므로 직전 분석 대비 신규 코드 판정은 정상 동작한다).
        // 정본 조치는 SonarCloud UI 에서 주 브랜치 이름을 master → develop(또는 main)으로 바꾸는 것이다.
    }
}

// 분석 전에 전 모듈이 컴파일돼 있게 강제한다.
//
// ci.yml 은 변경 모듈만 빌드하고(`:<module>:build`) 그다음 별도 Gradle 호출로 `sonar` 를 돌린다.
// 그래서 안 건드린 모듈에는 .class 가 없고, 스캐너가 "Binary paths (sonar.java.binaries) are empty"
// 를 남긴다(2026-08-12 run 31611508158 실측). 바이너리가 없으면 타입 해석이 반쪽이 되어
// ("Unresolved imports/types have been detected") 자바 규칙 상당수가 조용히 비활성화된다 —
// 분석이 "돌았다"와 "제대로 봤다"는 다르다. 컴파일 시간을 조금 더 쓰고 분석의 신뢰도를 산다.
// `classes` 가 아니라 `compileJava` 다. classes 를 걸면 processResources 가 그래프에 들어오고,
// 플러그인의 sonarResolver 가 그 산출 디렉터리를 선언 없이 읽어 Gradle 이 암묵 의존성 위반으로
// 빌드를 깬다(실측: "Declare task ':account-service:processResources' as an input of
// ':account-service:sonarResolver'"). 스캐너에 필요한 건 .class 뿐이므로 컴파일만 요구한다.
tasks.named("sonar") {
    dependsOn(subprojects.map { "${it.path}:compileJava" })
}
